<resources>
    <string name="app_name">Fit Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Recipe</string>
    <string name="menu_slideshow">Bmr Calculator</string>
    <string name="menu_tools">Contacts</string>
    <string name="menu_share">Step Counter</string>
    <string name="menu_send">Knowledge Base</string>
    <string name="count_zero">0</string>
    <string name="text_steps">Steps</string>
    <string name="ok">OK</string>
    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="calorie">Calorie:</string>
    <string name="km">km</string>
    <string name="kcal">Kcal</string>
    <string name="ss">/</string>
    <string name="distance">Distance:</string>
    <string name="_6000">6000</string>

    <string name="BMR_calculator">BMR Calculator</string>
    <string name="Ok">Ok</string>

    <array name="Exercise_details">
        <item>Very Little</item>
        <item>1–3 days per week</item>
        <item>3–5 days per week</item>
        <item>6–7 days per week</item>
        <item>twice per day, extra heavy workouts</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
