<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.blz.prisoner.fitguide.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_recipie"
        android:name="com.blz.prisoner.fitguide.ui.gallery.RecipeFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_recipe" />

    <fragment
        android:id="@+id/nav_bmr_calculator"
        android:name="com.blz.prisoner.fitguide.ui.slideshow.BmrCalculatorFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_bmr_calculator" />

    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.blz.prisoner.fitguide.ui.tools.ContactFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/nav_step_counter"
        android:name="com.blz.prisoner.fitguide.ui.share.StepCounterFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_step_counter" />

    <fragment
        android:id="@+id/nav_knowledge_base"
        android:name="com.blz.prisoner.fitguide.ui.send.KnowledgeBaseFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_knowledge_base" />
</navigation>