<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_steps"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#000">
        </TextView>

        <androidx.cardview.widget.CardView
            android:id="@+id/client_pic"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:cardCornerRadius="90dp"
            app:cardBackgroundColor="#808080"
            android:elevation="8dp"
            app:cardMaxElevation="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp">

            <androidx.cardview.widget.CardView
                android:layout_width="174dp"
                android:layout_height="174dp"
                app:cardCornerRadius="87dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/setep_counter">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <TextView
                        android:id="@+id/step_counts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/count_zero"
                        android:textStyle="bold"
                        android:textColor="#fff"
                        android:textSize="30sp">

                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/ss"
                        android:textColor="#fff"
                        android:textSize="30sp"
                        android:textStyle="bold">

                    </TextView>
                    <TextView
                        android:layout_marginStart="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_6000"
                        android:textStyle="bold"
                        android:textColor="#fff"
                        android:textSize="20sp">

                    </TextView>

                </LinearLayout>



            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/distance"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="20sp">

                </TextView>
                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="20sp">

                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:text="@string/km"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="20sp">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/calorie"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="20sp">

                </TextView>
                <TextView
                    android:id="@+id/calorie"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="20sp">

                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:text="@string/kcal"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="20sp">
                </TextView>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>